crates/pitboard/tests/snapshots/contract__watch_idle.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "watch",
    "ok": true,
    "data": {
      "event": "idle",
      "threshold": 95
    },
    "warnings": [],
    "error": null
  }
}
