crates/pitboard/tests/snapshots/contract__watch_switched.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "watch",
    "ok": true,
    "data": {
      "event": "switched",
      "threshold": 95,
      "from": "alpha",
      "to": "beta",
      "limit": {
        "kind": "session",
        "scope": null,
        "percent": 96.0,
        "resets_at": "[time]"
      },
      "adoption": {
        "follows": "polling",
        "within_seconds": 33
      }
    },
    "warnings": [],
    "error": null
  }
}
